<resources>
    <string name="app_name">Airtime</string>
    <string name="home">Home</string>
    <string name="item_details">Product Details</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="products">Available \nProducts</string>
    <string name="product_price">Price: Kshs. %1$d</string>
    <string name="quantity">Quantity: %1$d</string>
    <string name="menu_light_mode">Light Mode</string>
    <string name="menu_dark_mode">Dark Mode</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="promo_code">Enter Promo Code</string>
    <string name="promo_details">- Kshs. %1$d</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="product_name">Product Name</string>
    <string name="total_payment">Total Payment</string>
    <string name="total_buy">Total Buy</string>
    <string name="promo">Promo Code</string>
    <string name="total_pay">Total Pay</string>
    <string name="checkout">Checkout</string>
</resources>