<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.airtime.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_itemFragment"
            app:destination="@id/itemFragment" />
    </fragment>
    <fragment
        android:id="@+id/itemFragment"
        android:name="com.example.airtime.ItemFragment"
        android:label="@string/item_details"
        tools:layout="@layout/fragment_item">
        <action
            android:id="@+id/action_itemFragment_to_checkoutFragment"
            app:destination="@id/checkoutFragment" />
    </fragment>
    <fragment
        android:id="@+id/checkoutFragment"
        android:name="com.example.airtime.CheckoutFragment"
        android:label="@string/checkout"
        tools:layout="@layout/fragment_checkout" />


</navigation>